# personal-expenses-tracker

./: .gitignore  README.md
analytics-engine/: api.py  requirements.txt
analytics-engine/analytics/: __init__.py  forecast.py  insights.py  trends.py
calc-engine/: CMakeLists.txt
calc-engine/include/: statistics.hpp
calc-engine/jni/: StatsBridge.cpp
calc-engine/src/: main.cpp  statistics.cpp
calc-engine/tests/: test_statistics.cpp
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: DashboardLayout.jsx  ProtectedRoute.jsx
dashboard/src/context/: AuthContext.jsx
dashboard/src/pages/: AddExpense.jsx  Dashboard.jsx  Login.jsx  Register.jsx  Reports.jsx
dashboard/src/services/: api.js  mockApi.js
database/: schema.sql
docs/: api_collection.json
expense-backend/: mvnw.cmd  pom.xml
expense-backend/src/main/java/com/tracker/: Application.java
expense-backend/src/main/java/com/tracker/config/: DataInitializer.java  SecurityConfig.java
expense-backend/src/main/java/com/tracker/controller/: AuthController.java  ExpenseController.java
expense-backend/src/main/java/com/tracker/dto/: ApiResponse.java  AuthResponse.java  ExpenseRequest.java  ExpenseResponse.java  LoginRequest.java  RegisterRequest.java
expense-backend/src/main/java/com/tracker/exception/: GlobalExceptionHandler.java
expense-backend/src/main/java/com/tracker/jni/: StatsBridge.java
expense-backend/src/main/java/com/tracker/model/: Category.java  Role.java  (+2 more)
expense-backend/src/main/resources/: application.properties
(+8 files in other folders)
